force-app/main/default/objects/Product_of_Choice__c/Product_of_Choice__c.object-meta.xml
<CustomObject>
    <description>This object is used to relate product of choice to Physician records.  This relationship is created and maintained by the  Distributor sales channel.</description>
    <label>Product of Choice</label>
    <nameField>
        <displayFormat>POC-{00000}</displayFormat>
        <label>Product of Choice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products of Choice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>