force-app/main/default/objects/Product_of_Choice__c/fields/Annual_Units_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Annual_Units_Per_Year__c</fullName>
    <description>This field capture the number of units a particular physician uses per year.</description>
    <label>Volume per Year</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>