force-app/main/default/objects/Product_of_Choice__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Brand identifies the category for the product of choice (ex. NextGen)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand</label>
    <length>80</length>
    <type>Text</type>
</CustomField>