force-app/main/default/objects/Product_of_Choice__c/fields/Competitor_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer</fullName>
                <default>true</default>
                <label>Zimmer</label>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>Depuy</fullName>
            </value>
            <value>
                <fullName>Exactec</fullName>
            </value>
            <value>
                <fullName>Otis Medical</fullName>
            </value>
            <value>
                <fullName>Smith and Nephew</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Synthes</fullName>
            </value>
            <value>
                <fullName>Tournier</fullName>
            </value>
            <value>
                <fullName>Wright Medical</fullName>
            </value>
            <value>
                <fullName>Osteotech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>