force-app/main/default/objects/Product_of_Choice__c/fields/Name_del__c.field-meta.xml
<CustomField>
    <fullName>Name_del__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id,TEXT(Product__c)&amp;&quot;-&quot;&amp;TEXT(Annual_Units_Per_Year__c)&amp;&quot;Units&quot;,&quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>