force-app/main/default/objects/Product_of_Choice__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <label>Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products of Choice</relationshipLabel>
    <relationshipName>Products_of_Choice</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>