force-app/main/default/objects/Product_of_Choice__c/fields/POC_Comments__c.field-meta.xml
<CustomField>
    <fullName>POC_Comments__c</fullName>
    <description>Free text area for commenting on Product of Choice</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please feel free to use this text area for commenting on Product of Choice</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>