force-app/main/default/objects/Product_of_Choice__c/fields/Zimmer_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Zimmer_Preferred__c</fullName>
    <label>Zimmer Preferred</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>